--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@
   /* Movimiento */
   --dur-fast: 150ms;
   --dur: 200ms;
+  --dur-slow: 320ms;
   --ease-out: cubic-bezier(0.16, 1, 0.3, 1);
 }
 
